# qTrading

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pr_body.md  .pre-commit-config.yaml  .release-please-manifest.json  .secret.key.bak  AStockScreener.spec  CHANGELOG.md  CLAUDE.md  COMMIT_MSG3.txt  CONTRIBUTING.md  LICENSE  Plans-coverage-boost.md  Plans-residual-tech-debt.md  Plans-tech-debt.md  Plans.md  README.md  SECURITY.md  _test_out.txt  bench_inference.py  config.py  harness.toml  installer.iss  junit-e2e.xml  main.py  mylog.txt  mylog1.txt  output.txt  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_output.txt  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-optional.in  (+13 more)
.claude/state/: plan-preapprovals.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_android.yml  ci_cd.yml  codeql.yml  docs-check.yml  gitleaks.yml  release-please.yml  renovate.yml  scorecard.yml  sidecar.yml
.security/: audit-allowlist.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_financial_reports_balance_fields.py  0003_add_macro_publish_date.py  0004_add_limit_list_full_fields.py  (+38 more)
app/: bootstrap.py  error_logging.py  startup_controller.py  window_lifecycle.py
core/: __init__.py  i18n.py  prompt_base.py
data/: __init__.py  ai_client.py  cache_manager.py  constants.py  data_dictionary.py  data_processor.py  data_quality.py  database_manager.py  db_migrator.py  market_data_service.py  metadata_manager.py  models.py  news_fetcher.py  news_subscription.py  offline_calendar.py  quality_gate.py  review_manager.py  schema.sql  tushare_client.py
docs/: DATA_ARCHITECTURE.md  DATA_HEALTH_DESIGN.md  README.md  analysis_report.md  architecture_audit_report.md  architecture_principles.md  close_app.md  code_review_audit.md  code_review_guidelines.md  code_review_loading_overlay.md  code_review_plan.md  code_review_report.md  data_sync_implementation_plan.md  data_sync_integrity_enhancement.md  directory_structure_optimization.md  flet_best_practices.md  implementation_plan.md  implementation_plan_review.md  news_load_more_issue_analysis.md  option_a_detailed_plan.md  oversold_context_enhancement_plan.md  oversold_implementation_review_v3.md  oversold_implementation_review_v4.md  oversold_strategy_llm_context_analysis.md  pyright_gradual_typing_strategy.md  refactoring_report.md  review5.md  review6.md  spike-flet-0.86.0-report.md  strategy_parameter_grouping_plan.md  test_coverage_plan.md  trade_calendar_service_design.md  walkthrough.md
examples/: verify_sync_optimization.py
hooks/: hooks.json
man/: database-account-separation.md  flet-0.85.3-best-practices.md  flet-best-practices.md  table-partitioning-strategy.md
requirements/: USER_REQUIREMENTS.md
reviews/: doc-lint-3c-enforcement-mapping.md
scripts/: check_data_count.py  check_diff_coverage.py  check_docs_consistency.py  check_no_isolated_asyncio.py  check_per_file_coverage.py  check_redlines.py  check_staged_weak_assertions.py  check_theme_contrast.py  debug_tushare_api.py  detect_flaky.py  diagnose_db.py  doubao_auto_tagger.py  doubao_login.py  generate_sidecar_manifest.py  installer_smoke_crash_recovery.ps1  installer_smoke_running_app.ps1  installer_smoke_uninstall.ps1  installer_smoke_upgrade.ps1  migrate_strategy_name_to_i18n_key.py  run_pip_audit.py  run_pyright_changed.py  safe_cleanup_branches.py  scan_weak_assertions.py  verify_dao_upsert.py  verify_embedded_pg_connect.py  verify_moneyflow.py  verify_quality_check.py  verify_ui_web.py  verify_versions.py  verify_wal.py
services/: ai_service.py  backtest_service.py  embedded_pg_maintenance_service.py  local_model_manager.py  news_subscription_service.py  task_manager.py
sidecars/qtrading-pg-sidecar/: Cargo.toml  build.rs
sidecars/qtrading-pg-sidecar/.cargo/: config.toml
sidecars/qtrading-pg-sidecar/src/: cli.rs  commands.rs  exit_codes.rs  lockfile.rs  logging.rs  main.rs  maint.rs  password.rs  paths.rs  pgbin.rs  preflight.rs  protocol.rs  run.rs  setup.rs  state.rs
sidecars/qtrading-pg-sidecar/tests/: failure_injection.rs  roundtrip.rs
sidecars/qtrading-pg-sidecar/tests/common/: mod.rs
strategies/: ai_mixin.py  ai_strategy.py  all_strategies.py  base_strategy.py  fundamental.py  market.py  oversold_strategy.py  polars_base.py  prompt_validator.py  strategy_prompts.py  utils.py
tests/: __init__.py  _helpers.py  _sidecar_binary.py  conftest.py  helpers.py  reproduce_token_bug.py  run_sync_integrity_tests.py  test_ai_core.py  test_ai_horizon.py  test_ai_mixin.py  test_ai_service_prompt_dump_retention.py  test_alembic_alignment.py  test_alembic_legacy_upgrade.py  test_alembic_schema_scope_helpers.py  test_api_today.py  test_api_tushare_client.py  test_base_dao_cancelled_error.py  test_cache_manager.py  test_code_review_v3.py  test_config_handler.py  test_config_handler_keyring_fallback.py  test_config_panels.py  test_config_rw_lock.py  test_correlation.py  test_created_at_field.py  test_dao_base.py  test_dao_business.py  test_data_cache_manager.py  test_data_db_manager.py  test_data_db_migrator.py  test_data_db_security.py  test_data_dictionary_alignment.py  test_data_integrity.py  test_data_processor.py  test_data_quality.py  test_data_timestamp_fields.py  test_data_trade_calendar.py  test_database_manager.py  test_database_security.py  test_deep_link.py  (+97 more)
ui/: app_layout.py  hooks.py  i18n.py  pubsub_topics.py  startup_views.py  theme.py  v1_compat.py
utils/: async_utils.py  config_handler.py  config_models.py  constants.py  correlation.py  db_utils.py  diagnostics.py  error_classifier.py  exception_hooks.py  llm_providers.py  log_decorators.py  logger.py  loop_local.py  prompt_guard.py  proxy_manager.py  qfq.py  rate_limiter.py  sanitizers.py  scheduler_service.py  security_utils.py  shutdown.py  singleton_registry.py  technical_analysis.py  thread_pool.py  time_utils.py  verify_tushare_apis.py
(+685 files in other folders)
