[project]
name = "AStockScreener"
version = "1.0.0"
description = "智能 A 股 AI 量化交易员"
requires-python = ">=3.14"

# urllib3>=2.6.3: Fix Brotli decode error for requests; must be >= 2.6.2
# brotlicffi: Fast Brotli compression support for urllib3 (optional dep, must be explicit)
# playwright: Browser automation for E2E tests and scraping helpers
dependencies = [
    "flet==0.28.3",
    "flet-desktop==0.28.3",
    "tushare==1.4.29",
    "akshare>=1.18.60",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "urllib3>=2.6.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pandas_market_calendars>=5.3.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "sqlparse>=0.5.5",
    "litellm>=1.82.6",
    "llama-cpp-python==0.3.22",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.10.8",
    "apscheduler>=3.11.2",
    "tzdata>=2025.3",
    "pytz>=2024.1",
    "python-dotenv==1.0.1",
    "keyring>=25.7.0",
    "cryptography>=47.0.0",
    "readerwriterlock>=1.0.9",
    "cachetools>=7.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "pandas-stubs>=2.2.0",
    "pip-tools>=7.0",
    "pip-audit>=0.3.0",
]
optional = [
    "brotlicffi>=1.1.0.0",
    "playwright>=1.59.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "BLE"]
ignore = ["E501", "E402", "SIM102", "SIM105", "SIM108", "SIM117", "BLE001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (real sleeps, heavy I/O)",
    "network: Tests requiring real network access",
]

[tool.coverage.run]
source = ["core", "data", "services", "strategies", "utils", "ui", "config", "main"]
omit = [
    "data/tiktoken_cache/*",
    "scripts/*",
]

[tool.coverage.report]
fail_under = 85
per_file_minimum = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
