[project]
name = "AStockScreener"
version = "0.4.2"
description = "智能 A 股 AI 量化交易员"
requires-python = ">=3.13"

# urllib3>=2.7.0: Fix Brotli decode error for requests; must be >= 2.6.2
# brotlicffi: Fast Brotli compression support for urllib3 (optional dep, must be explicit)
# playwright: Browser automation for E2E tests and scraping helpers
dependencies = [
    "flet==0.28.3",
    "flet-desktop==0.28.3",
    "tushare==1.4.29",
    "akshare>=1.18.60",
    "requests>=2.34.0",
    "httpx>=0.28.0",
    "urllib3>=2.7.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pandas_market_calendars>=5.3.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "sqlparse>=0.5.5",
    "litellm>=1.87.0",  # Upgrade to latest stable; aiohttp CVE-2026-47265/CVE-2026-34993 fixed via transitive dep
    "llama-cpp-python>=0.3.23",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.10.9",
    "apscheduler>=3.11.2",
    "tzdata>=2026.2",
    "pytz>=2026.2",
    "python-dotenv>=1.2.2",
    "keyring>=25.7.0",
    "cryptography>=48.0.0",
    "readerwriterlock>=1.0.9",
    "cachetools>=7.1.0",
    "pydantic>=2.11.0",
    "aiohttp>=3.14.0",  # Security: CVE-2026-47265, CVE-2026-34993 fixed in 3.14.0
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.0",
    "pandas-stubs>=3.0.0.250204",
    "uv>=0.7.0",
    "pip-audit>=2.10.0",
]
optional = [
    "brotlicffi>=1.2.0.0",
    "playwright>=1.59.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "BLE"]
ignore = ["E501", "E402", "SIM102", "SIM105", "SIM108", "SIM117", "BLE001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
]
addopts = "--durations=20 --durations-min=1.0"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (real sleeps, heavy I/O)",
    "network: Tests requiring real network access",
    "database: Tests requiring database connection",
    "ai: Tests requiring AI service",
]

[tool.coverage.run]
branch = true
source = ["core", "data", "services", "strategies", "utils", "ui", "config", "main"]
omit = [
    "data/tiktoken_cache/*",
    "scripts/*",
    "tests/*",
]

[tool.coverage.report]
# fail_under: 流水线整体覆盖率阈值，低于此值时 CI 失败
# 用于确保整体代码质量，防止覆盖率下降
fail_under = 85
# per_file_minimum: 单文件覆盖率阈值，用于流水线检查单个文件的覆盖率
# 确保每个模块都有足够的测试覆盖，避免某些文件覆盖率过低
per_file_minimum = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
