[project]
name = "AStockScreener"
version = "0.9.0"
description = "智能 A 股 AI 量化交易员"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

# urllib3>=2.7.0: Fix Brotli decode error for requests; must be >= 2.6.2
# brotlicffi: Fast Brotli compression support for urllib3 (optional dep, must be explicit)
#
# Version constraint policy (DEP-M1):
# - All dependencies use >= for forward compatibility.
# - Exceptions pinned with == (breaking changes / tight coupling):
#   * flet / flet-desktop / flet-charts: UI framework with breaking layout/behavior changes across minor versions; flet-charts is the chart control package split out since V1.
#   * tushare: API methods and data formats vary between versions; client code is tightly coupled.
#   * akshare: API methods, return types, and column names vary between versions; client code calls 5+ ak.stock_* methods and imports internal module stock_disclosure_cninfo.
dependencies = [
    "flet==0.86.0",
    "flet-desktop==0.86.0",
    "flet-charts==0.86.0",
    "tushare==1.4.29",
    "akshare==1.18.64",
    "requests>=2.34.0",
    "httpx>=0.28.0",
    "urllib3>=2.7.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pandas_market_calendars>=5.3.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "sqlparse>=0.5.5",
    "litellm>=1.91.0",  # Upgrade to latest stable; aiohttp CVE-2026-47265/CVE-2026-34993 fixed via transitive dep
    "llama-cpp-python>=0.3.33",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.11.0",
    "apscheduler>=3.11.3",
    "tzdata>=2026.2",
    "pytz>=2026.2",
    "python-dotenv>=1.2.2",
    "keyring>=25.7.0",
    "cryptography>=48.0.1",
    "readerwriterlock>=1.0.9",
    "cachetools>=7.1.0",
    "pydantic>=2.11.0",
    "aiohttp>=3.14.0",  # Security: CVE-2026-47265, CVE-2026-34993 fixed in 3.14.0
    "pillow>=12.3.0",  # Security: PYSEC-2026-2253~2257 (decompression bomb + shell injection) fixed in 12.3.0
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=14.0",
    "pytest-randomly>=3.15.0",
    "pytest-timeout>=2.3.0",  # Diagnose CI integration test hang (xdist worker deadlock)
    "pytest-json-report>=1.5.0",  # JSON report for scripts/detect_flaky.py
    "ruff>=0.15.20",
    "pyright>=1.1.411",
    "pandas-stubs>=3.0.0.250204",
    "uv>=0.11.26",
    "pip-audit>=2.10.0",
    "hypothesis>=6.0",
    "syrupy>=4.0",
    "msgpack>=1.2.1",  # Security: GHSA-6v7p-g79w-8964 (Use After Free in Unpacker reuse)
    "import-linter>=2.13",  # Architecture guard: enforce R1 layered dependencies (CLAUDE.md §4.1)
]
optional = [
    "brotlicffi>=1.2.0.1",
    "playwright>=1.61.0",  # E2E browser automation for Flet desktop tests
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "SIM", "BLE"]
ignore = ["E501", "E402", "SIM102", "SIM105", "SIM108", "SIM117", "BLE001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_level = "DEBUG"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
]
addopts = "--durations=20 --durations-min=1.0"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (real sleeps, heavy I/O)",
    "network: Tests requiring real network access",
    "database: Tests requiring database connection",
    "migration: Tests that perform DDL (drop_all/create_all) on shared engine, should run serially",
    "ai: Tests requiring AI service",
    "no_auto_mock: Skip auto-mocking of external services in conftest",
    "mutates_config: marks tests that mutate global config (theme/language) and need restoration",
    "no_db: Tests that do not require database (skip DB schema initialization in integration autouse fixture)",
]

[tool.coverage.run]
branch = true
source = ["core", "data", "services", "strategies", "utils", "ui", "app", "config", "main"]
omit = [
    "data/tiktoken_cache/*",
    "scripts/*",
    "tests/*",
]

[tool.coverage.report]
# fail_under: 流水线整体覆盖率阈值，低于此值时 CI 失败
# 用于确保整体代码质量，防止覆盖率下降
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.custom_coverage]
# 单个文件覆盖率阈值，由 scripts/check_per_file_coverage.py 读取，不属于 coverage.py 的原生选项
per_file_minimum = 80

[tool.importlinter]
# R1 架构越界守护 (CLAUDE.md §3.1 R1 / §4.1)
root_packages = [
    "core",
    "data",
    "services",
    "strategies",
    "ui",
    "app",
    "utils",
]
# 排除 `if TYPE_CHECKING:` 块内的导入。
# services/backtest_service.py 合法地在 TYPE_CHECKING 块中导入 strategies 层仅用于类型注解。
exclude_type_checking_imports = true

# 契约 1: R1 — core 不可导入任何其他层 (§3.1 R1 / §4.2)
[[tool.importlinter.contracts]]
name = "R1: core must not import any other layer"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["data", "services", "strategies", "ui", "utils", "app"]

# 契约 2: R1 — data 不可导入 services/strategies/ui (§3.1 R1 / §4.1)
[[tool.importlinter.contracts]]
name = "R1: data must not import services/strategies/ui"
type = "forbidden"
source_modules = ["data"]
forbidden_modules = ["services", "strategies", "ui"]

# 契约 3: R1 — services 不可导入 strategies/ui (§3.1 R1 / §4.1)
[[tool.importlinter.contracts]]
name = "R1: services must not import strategies/ui"
type = "forbidden"
source_modules = ["services"]
forbidden_modules = ["strategies", "ui"]

# 契约 4: R1 — strategies 不可导入 ui (§3.1 R1 / §4.1)
[[tool.importlinter.contracts]]
name = "R1: strategies must not import ui"
type = "forbidden"
source_modules = ["strategies"]
forbidden_modules = ["ui"]

