[package]
name = "qtrading-pg-sidecar"
version = "0.1.0"
edition = "2021"
description = "qTrading embedded PostgreSQL sidecar (pg_plan Phase 1 MVP)"
build = "build.rs"

[dependencies]
# crates.io 2026-07-20 核实: newest_version = 0.21.0
# https://crates.io/api/v1/crates/postgresql_embedded
# default-features=false 去掉 tls-native-tls(避免 Windows OpenSSL 构建链), 用 rustls-ring
postgresql_embedded = { version = "=0.21.0", default-features = false, features = [
    "bundled",
    "theseus",
    "tokio",
    "tls-rustls-ring",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "signal",
    "process",
    "time",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "std",
] }
# 维护锁（flock/LockFileEx，进程死亡自动释放）+ free_space 磁盘预检
fs2 = "0.4"
sha2 = "0.10"
rand = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
# sidecar 单文件分发：瘦身但不牺牲调试符号完全剥离（sha256 可校验由 version --json 提供）
lto = "thin"
codegen-units = 1
